# RaceSimulator

./: .gitignore  .race_simulator_cmd.c.swp  CMakeLists.txt  IPCManager.c  RACE_SIMULATOR_NAMED_PIP  README.md  RaceSimulator  RaceSimulator.drawio  Relatorio_SO.docx  TeamManager.c  cmd  config.txt  debug.c  debug.h  diagram.drawio  error_handler.c  error_handler.h  exception_handler.c  exception_handler.h  global.h  global_header.h  ipc_manager.c  ipc_manager.h  log.txt  log_generator.c  log_generator.h  main.c  makefile  malfunction_manager.c  malfunction_manager.h  message_qeue.c  message_qeue.h  named_pipe_commands.txt  named_pipe_server.c  priority_qeue.c  priority_qeue.h  priority_queue.c  priority_queue.h  process_manager.c  process_manager.h  (+26 more)
data_structures/priority_queue/: priority_queue.c  priority_queue.h
helpers/cmd_validator/: cmd_validator.c  cmd_validator.h
helpers/log_generator/: log_generator.c  log_generator.h
helpers/race_config_reader/: race_config_reader.c  race_config_reader.h
helpers/signal_manager/: signal_manager.c  signal_manager.h
helpers/stats_helper/: stats_helper.c  stats_helper.h
helpers/thread_clock/: thread_clock_t.c  thread_clock_t.h
ipcs/memory_mapped_file/: memory_mapped_file.c  memory_mapped_file.h
ipcs/message_queue/: msg_queue.c  msg_queue.h
ipcs/pipe/: named_pipe_server.c  pipe.c  pipe.h
ipcs/shared_memory/: shm.c  shm.h
processes/race_manager/: race_manager.c  (+1 more)
structs/: race_box.h  race_box_t.h  race_car.h  race_car_t.c  race_car_t.h  race_config.h  race_config_t.c  race_config_t.h  race_team.h  race_team_t.c  race_team_t.h  shared_memory.h  shared_memory_t.h
util/: debug.c  debug.h  error_handler.c  error_handler.h  exception_handler.c  exception_handler.h  global.h  ipc_manager.c  ipc_manager.h  process_manager.c  process_manager.h  read_line.c  read_line.h  str_concat.c  str_concat.h  to_float.c  to_float.h
(+90 files in other folders)
